methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:10: error: value < is not a member of object java.awt.Color
  fairePot(Color.PINK); forward(); forward(); forward(); fairePot(Color.<green); backward(); backward(); backward(); backward(); backward(); backward();
                                                                        ^FlowerPot:14: error: value Yellow is not a member of object java.awt.Color
  faireC(c:Color); setCouleurBrosse(Color.Yellow);
                                          ^